ops/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devsu
  name: devsu-prod-service
spec:
  selector:
    app: devsu-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
